child-theme/css/child-theme-custom.css
/* ... */
#main-content .social-share img{
	display: inline;
	margin-left: 1em;
	height: 16px;
}

#main-content .social-share p{
	display: flex;
	align-items: center;
}

/*Override EN Default Icons */

#main-content .en__share__button {
    height: 16px;
    width: 16px;
}

#main-content .en__shares{
    align-items: center;
}

#main-content .en__shares::before {
    content: "SHARE";
    font-size: 14px;
    letter-spacing: 0.7px;
    font-weight: bold;
    font-style: normal;
    font-stretch: normal;
    line-height: 1.5;
    color: #323232;
    margin-right: 1rem;
}

#main-content .en__share__button--facebook {
    background-image: url(../../parent-theme/images/facebook.svg) !important;
}

#main-content .en__share__button--twitter {
    background-image: url(../../parent-theme/images/twitter.svg) !important;
}

#main-content .en__share__button--gplus {
	background-size: 16px;
}

#main-content .en__field--donationAmt.en__field.en__field--radio .en__field__item{
	min-width: 100px;
	margin-bottom: 1rem;  /*In the event the buttons wrap */

	/*
	flex-grow: 1;
	min-width: 155px;
	margin-bottom: 1rem;
	max-width: 155px;
	*/
}

#main-content .en__component .en__field.en__field--radio .en__field__item--other{
	margin-top: 0;
}

#main-content .en__field--donationAmt .en__field__item--other input {
    width: 215px;
}

/* Adjust the donation button area width area so that the intentionally wrap creating a nicer look */
#main-content .en__field--donationAmt .en__field__element--radio{
	width: 90%;
	margin: 0 auto;
}

/************************************
 * Error Messages Color
 ***********************************/

.en__errorHeader,
.en__errorList > .en__error,
#main-content .en__component .en__field__error,
#main-content .en__component .en__field__error-wrapper .en__field__error,
#main-content .en__component .en__field__error-wrapper input,
#main-content .en__component .en__field__error-wrapper select,
#main-content .en__component .en__field__error-wrapper textarea,
#main-content .en__component .en__field__error-wrapper.en__field--splittext input,
#main-content .en__component .en__field__error-wrapper.en__field--tripletext input,
#main-content .en__component .en__field__error-wrapper.en__field--splitselect select,
#main-content .en__component .en__field__error-wrapper.en__field--tripleselect input,
#main-content .en__component .en__field__error-wrapper.en__field--splittext .en__field__error,
#main-content .en__component .en__field__error-wrapper.en__field--tripletext .en__field__error,
#main-content .en__component .en__field__error-wrapper.en__field--splitselect .en__field__error,
#main-content .en__component .en__field__error-wrapper.en__field--tripleselect .en__field__error,
#main-content .en__component .en__field__error-wrapper.en__field--radio.en__field--withOther .en__field__error{
  border: 1px solid #d7334b;
}
	
#main-content .give-by-select.radio-to-buttons.dark-buttons .en__field__element--radio .en__field__item label.en__field__label.en__field__label--item:hover,
#main-content .give-by-select.radio-to-buttons.dark-buttons .en__field__element--radio .en__field__item input[type='radio']:checked + label {
    background-color: #666666;
    border-color: #666666;
}

/************************************
 * Medium Breakpoint (Mid Resolution Device)
 * At this breakpoint, rows elements expand to take up their own row
 * A row with two input fields display 50% width will now have to rows, one for each input field, displaying 100% width
 * Inputs that are multipart (ie Spit Text) will still retain their look on a single row and are not broken up
 * REF: https://material.io/guidelines/layout/responsive-ui.html#responsive-ui-breakpoints
 ***********************************/

@media (max-width: 960px){

	.hide-medium{
		display: none !important;	
	}

	/* Override EN Default Behavior */
	.en__component--column.en__component--advcolumn.row-breakout{
		width: auto;
	}

	/* Hide all the middle giving value */
	.donation-amount.show-hidden-input.round-buttons .en__field__item:not(:first-of-type):not(:last-of-type){
		display: none;
	}

	/* Show the second giving value */
	#main-content .donation-amount.show-hidden-input.round-buttons .en__field__item:nth-child(2){
		display: initial !important;
	}

	/* Hides long form country select */
	#main-content #en_custom_field_simple_country_select_long {
		display: none;
	}

	/* Shows short form hidden country select */
	#main-content #en_custom_field_simple_country_select_short {
		display: initial;
	}

	#main-content .indented-body{
		margin: 0 auto;
	}

	.form-side-by-side #main-content .en__component--row.en__component--advrow {
	    display: block;
	}

  /* Form switches from row to column display format */
  /*
  #main-content .en__component--formblock:not(.en-form-lazy-layout){
    flex-direction: column;
  }
	*/

  /* Because elements are now displayed in a column, those that are centered need a new attribute */
 /*
  #main-content .en-row-center{
    align-items: center;
  }
*/
/*
  #main-content .en__component--formblock:not(.en-form-lazy-layout) .en__field:first-of-type{
    margin-right: 0rem;
  }
*/
  /* ENs page builder adds a div to the formblock DOM on hover. This will cause a small right margin to appear as the expected input fields are no longer the last of their siblings */
 /* #main-content .en__component--formblock:not(.en-form-lazy-layout) .en__field:last-of-type{
    margin-left: 0rem;
  }
*/
/*
  #main-content .en__component--formblock:not(.en-form-lazy-layout) .en__field:not(:first-of-type):not(:last-of-type){
    margin-left: 0rem;
    margin-right: 0rem;
  }  
 */
}
/* ... */

